<resources>
    <string name="app_name">Ejemplo BottomSheet</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotten">Forgotten?</string>
    <string name="surname">surname</string>
    <string name="phone">Phone</string>
    <string name="sing_up">Sing Up</string>
</resources>