<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintRegistration"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:id="@+id/layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:background="@color/black"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_standard"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/name"
        android:autofillHints="@string/name"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/surname"
        android:autofillHints="@string/surname"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/phone"
        android:autofillHints="@string/phone"
        android:inputType="phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:layout_gravity="end"
        android:layout_margin="@dimen/margin_standard"
        android:paddingStart="@dimen/margin_standard"
        android:paddingEnd="@dimen/margin_standard" />

</LinearLayout>